--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -105,3 +105,22 @@ h6:hover .anchor-link {
 .anchor-link:hover {
   opacity: 1;
 }
+
+@keyframes flash {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.flash-language-dropdown {
+  animation: flash 1s infinite alternate; /* Adjust duration and iteration as needed */
+  /* Optional: Add a border or background color change for more emphasis */
+  border: 2px solid orange;
+  box-shadow: 0 0 10px rgba(255, 165, 0, 0.7);
+}
