refactor language redirect logic

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -121,6 +121,6 @@ h6:hover .anchor-link {
 .flash-language-dropdown {
   animation: flash 1s infinite alternate; /* Adjust duration and iteration as needed */
   /* Optional: Add a border or background color change for more emphasis */
-  border: 2px solid orange;
-  box-shadow: 0 0 10px rgba(255, 165, 0, 0.7);
+  border: 2px solid limegreen;
+  box-shadow: 0 0 10px limegreen;
 }
